--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -21,36 +21,60 @@
     改进反转因子\
     $rtn_{except open 30T、close 30T}$
 
+    <font color=pink>
+    
+    跳空动量\
+    有夜盘的品种：早开-夜收；无夜盘的品种：早开-午收\
+    夜盘收益率
+    
+    </font>
+
+
 
 4. 成交量、成交额分拆
    
     $vol_{morning} / vol$\
     $vol_{down} / vol$\
     $vol_{open30T} / vol$\
-    $vol_{close30t} / vol$
+    $vol_{close30t} / vol$\
+    $\frac{vol_{open30T}}{vol_{noonclose30T}}$\
+    $\frac{vol_{morning}}{vol_{afternoon}}$
 
     $amount_{morning} / amount$\
     $amount_{down} / amount$\
-    $amount_{open15T} / amount$\
-    $amount_{close15t} / amount$
+    $amount_{open30T} / amount$\
+    $amount_{close30t} / amount$\
+    $\frac{amount_{open30T}}{amount_{noonclose30T}}$\
+    $\frac{amount_{morning}}{amount_{afternoon}}$
 
 5. 量价复合因子
 
     $corr(rtn, volume)$
 
+    $分钟急切度 S_t=\frac{R_t}{\sqrt{V_t}}$\
+    选取成交量达到日内成交量10%的，分钟急切度排名靠前的n根k线，计算$P=\sum\limits_n|R_t|$
+    
+
 6. 资金流
 
-    基于成交量，日内的上涨成交额-下跌成交额 / 总成交额
-    $\sum\limits_i volume_i* close_i * \frac{close_i-close_{i-1}}{|close_i - close_{i-1}|} / \sum\limits_i amount_i$\
-    $amount_i = volume_i * close_i$
+    基于成交量，日内的上涨成交额-下跌成交额 / 总成交额 
+    $$ \sum\limits_i volume_i* close_i * \frac{close_i-close_{i-1}}{|close_i - close_{i-1}|} / \sum\limits_i amount_i $$
+
+    $$amount_i = volume_i * close_i$$
 
 7. 基差
 
     当期主力合约和次主力合约的基差
 
+    开盘1-m分钟的平均基差、收盘1-m分钟的平均基差，两个基差的差值
 
+    日内平均基差
+
+    
 8. 流动性
 
+    <font color=pink>
+    
     amihud $illq = \frac{|rtn|}{amount}$\
     pastor gamma $r_i = \alpha + \gamma*sign(r{i-1})* v_{i-1}$\
     LOT 零收益率时间占比 $\frac{n_{rtn = 0}}{n}$\
@@ -59,9 +83,12 @@
     $$ CS=\frac{2(e^\alpha-1)}{1+e^\alpha}$$
     $$ \alpha = \frac{\sqrt2\beta - \sqrt\beta}{3-2\sqrt2}-\sqrt\frac{\gamma}{3-2\sqrt2}$$
     $$\beta = E(\sum\limits_i[ln(\frac{H^O_{t+j}}{L^O_{t+j}}]^2)$$
-    $$\gamma = [ln(\frac{H^O_{t,t+1}}{L^O_{t,t+1}})]^2$$
+    $$\gamma = [ln(\frac{H^O_{t,t+1}}{L^O_{t,t+1}})]^2$$ 
+    
+    </font>
 
 9. 波动率
+    <font color=pink>
 
     bi-power variation
     $$\sigma_{bv}=\sqrt{BV}$$
@@ -74,6 +101,40 @@
     $$C_n = \frac{(2ln n)^{1/2}}{c}-\frac{ln\pi + \ln(lnn)}{2c(2lnn)^{1/2}}$$
     $$D_n=\frac{1}{c{2lnn}^{1/2}}，c=\sqrt\frac{2}{\pi}$$
     $$大于临界值则在、alpha显著性水平上存在跳跃，c_\alpha=-ln(-ln(1-\alpha))$$
+    </font>
+
+7.波动率不对称性
+
+<font color=pink>
+
+$bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
+
+</font>
+
+
+
+8.其他指标
+
+<font color=pink>
+
+$聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
+$聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$\
+直接提取历史价格数据中的主成分、SVM
+
+</font>
+
+
+
+
+## 基本面指标
+<font color=pink>
+
+现货价格历史百分位、价差历史百分位
+
+</font>
+
+
+
 
 
 
