因子文档更新

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -50,10 +50,10 @@
 5. 量价复合因子
 
     $corr(rtn, volume)$
-
-    $分钟急切度 S_t=\frac{R_t}{\sqrt{V_t}}$\
+    <font color=pink>
+    分钟急切度 $ S_t=\frac{R_t}{\sqrt{V_t}}$\
     选取成交量达到日内成交量10%的，分钟急切度排名靠前的n根k线，计算$P=\sum\limits_n|R_t|$
-    
+    </font>
 
 6. 资金流
 
@@ -121,6 +121,10 @@ $聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K
 $聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$\
 直接提取历史价格数据中的主成分、SVM
 
+振幅：高价振幅-低价振幅
+
+$CVaR_{5\%}$：日内高频收益率分布左侧5%的简单期望值
+$VCVaR_{5\%}$：日内高频收益率分布左侧5%的VWAP期望值
 </font>
 
 
