流动性、波动率衍生指标

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -73,12 +73,15 @@
     
 8. 流动性
 
-    <font color=pink>
+
     
     amihud $illq = \frac{|rtn|}{amount}$\
-    pastor gamma $r_i = \alpha + \gamma*sign(r{i-1})* v_{i-1}$\
+    pastor gamma $r_i = \alpha + \gamma*sign(r_{i-1})* v_{i-1}$\
     LOT 零收益率时间占比 $\frac{n_{rtn = 0}}{n}$\
     Roll价差 $S=2\sqrt{-cov(\Delta P_t, \Delta P_{t-1})}$\
+    
+    <font color=pink>
+
     CS价差(range measure) 日频:
     $$ CS=\frac{2(e^\alpha-1)}{1+e^\alpha}$$
     $$ \alpha = \frac{\sqrt2\beta - \sqrt\beta}{3-2\sqrt2}-\sqrt\frac{\gamma}{3-2\sqrt2}$$
@@ -88,7 +91,7 @@
     </font>
 
 9. 波动率
-    <font color=pink>
+
 
     bi-power variation
     $$\sigma_{bv}=\sqrt{BV}$$
@@ -96,19 +99,23 @@
     $$r_j = X_j - X_{j-1} ,X_j = ln(Sj)$$
     $$K为区间内采样数量$$
 
+    <font color=pink>
+
     是否存在跳跃（LM检验）
     $$LM=\frac{\max\limits_{i\in A_n}|L(i)| - C_n}{D_n}$$
     $$C_n = \frac{(2ln n)^{1/2}}{c}-\frac{ln\pi + \ln(lnn)}{2c(2lnn)^{1/2}}$$
     $$D_n=\frac{1}{c{2lnn}^{1/2}}，c=\sqrt\frac{2}{\pi}$$
     $$大于临界值则在、alpha显著性水平上存在跳跃，c_\alpha=-ln(-ln(1-\alpha))$$
+
     </font>
 
 7.波动率不对称性
 
-<font color=pink>
+
 
 $bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
 
+<font color=pink>
 </font>
 
 
@@ -119,7 +126,6 @@ $bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
 
 $聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
 $聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$\
-直接提取历史价格数据中的主成分、SVM
 
 振幅：高价振幅-低价振幅
 
@@ -127,7 +133,7 @@ $CVaR_{5\%}$：日内高频收益率分布左侧5%的简单期望值
 $VCVaR_{5\%}$：日内高频收益率分布左侧5%的VWAP期望值
 </font>
 
-
+直接提取历史价格数据中的主成分、SVM
 
 
 ## 基本面指标
