others_factor.py

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -50,10 +50,10 @@
 5. 量价复合因子
 
     $corr(rtn, volume)$
-    <font color=pink>
-    分钟急切度 $ S_t=\frac{R_t}{\sqrt{V_t}}$\
+
+    $分钟急切度 S_t=\frac{R_t}{\sqrt{V_t}}$\
     选取成交量达到日内成交量10%的，分钟急切度排名靠前的n根k线，计算$P=\sum\limits_n|R_t|$
-    </font>
+    
 
 6. 资金流
 
@@ -73,8 +73,6 @@
     
 8. 流动性
 
-
-    
     amihud $illq = \frac{|rtn|}{amount}$\
     pastor gamma $r_i = \alpha + \gamma*sign(r_{i-1})* v_{i-1}$\
     LOT 零收益率时间占比 $\frac{n_{rtn = 0}}{n}$\
@@ -90,7 +88,7 @@
     
     </font>
 
-9. 波动率
+9.  波动率
 
 
     bi-power variation
@@ -125,12 +123,18 @@ $bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
 <font color=pink>
 
 $聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
-$聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$\
+$聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$
 
-振幅：高价振幅-低价振幅
+近期收益率更受投资者关注，早期收益率不受关注：直接对历史X天的收益率进行建模，预测未来一期收益率的预测值。（Extrapolative Beliefs in the Cross-Section）
+$$ rtn_t = \sum\limits_i \beta rtn_{t-i} + \epsilon, 使用 \hat{rtn_{t}}$$
 
-$CVaR_{5\%}$：日内高频收益率分布左侧5%的简单期望值
-$VCVaR_{5\%}$：日内高频收益率分布左侧5%的VWAP期望值
+CVaR 日内收益率分布在左侧5%的算数平均收益率
+VCVaR 日内收益率分布在左侧5%的vwap平均收益率
+
+高位振幅-低位振幅
+
+
+
 </font>
 
 直接提取历史价格数据中的主成分、SVM
