debug basis factor

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -120,25 +120,25 @@ $bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
 
 8.其他指标
 
-<font color=pink>
+<font color=pink size=3>
 
-$聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
-$聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$
 
 近期收益率更受投资者关注，早期收益率不受关注：直接对历史X天的收益率进行建模，预测未来一期收益率的预测值。（Extrapolative Beliefs in the Cross-Section）
 $$ rtn_t = \sum\limits_i \beta rtn_{t-i} + \epsilon, 使用 \hat{rtn_{t}}$$
 
-CVaR 日内收益率分布在左侧5%的算数平均收益率
-VCVaR 日内收益率分布在左侧5%的vwap平均收益率
 
 高位振幅-低位振幅
 
-
-
 </font>
+
+VWAP振幅
+CVaR 日内收益率分布在左侧5%的算数平均收益率
+VCVaR 日内收益率分布在左侧5%的vwap平均收益率
 
 直接提取历史价格数据中的主成分、SVM
 
+$聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
+$聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$
 
 ## 基本面指标
 <font color=pink>
