HF VOLUME RATIO

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -117,7 +117,6 @@ $bollerslev  RSJ=\frac{RV^+_t-RV^-_t}{RV_t}$
 </font>
 
 
-
 8.其他指标
 
 <font color=pink size=3>
@@ -140,14 +139,16 @@ VCVaR 日内收益率分布在左侧5%的vwap平均收益率
 $聪明钱交易定义 S_t=\frac{|R_t|}{\sqrt{V_t}}，选择S_t占比前20\%的K线作为聪明钱交易$\
 $聪明钱交易占比 Q=\frac{VWAP_{smart}}{VWAP_{all}}$
 
-## 基本面指标
-<font color=pink>
 
-现货价格历史百分位、价差历史百分位
+===========
+    
+9.量指标
 
-</font>
+量比：5分钟成交量/20分钟成交量，或换其他参数
+ $$ V_{5T} / V_{20T}$$
 
-
+波动趋势
+$$ std_{5T} / std_{20T}$$
 
 
 
