1.PCA FACTOR 2.leverage effect factor

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -130,6 +130,9 @@ $$ rtn_t = \sum\limits_i \beta rtn_{t-i} + \epsilon, 使用 \hat{rtn_{t}}$$
 
 </font>
 
+杠杆效应Leverage Effect
+$$ Corr(BV, rtn) , Corr(std, rtn)$$
+
 VWAP振幅
 CVaR 日内收益率分布在左侧5%的算数平均收益率
 VCVaR 日内收益率分布在左侧5%的vwap平均收益率
