--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -3,8 +3,8 @@
 
 1. 简单-日内收益率的矩：均值、标准差、偏度、峰度
 
-    $mean、std、skew、kurtosis$
-
+    $mean【5T】、std、skew、kurtosis$
+    
 2. 日内收益率分拆
 
     日盘：开盘5、10分钟；上午；收盘5、10分钟收益率\
@@ -20,7 +20,7 @@
 
     改进反转因子\
     $rtn_{except open 30T、close 30T}$
-
+    
     <font color=pink>
     
     跳空动量\
@@ -73,7 +73,7 @@
 
 8. 流动性
 
-    amihud $illq = \frac{|rtn|}{amount}$\
+    amihud $illq = \frac{|rtn|}{amount}$【5T】\
     pastor gamma $r_i = \alpha + \gamma*sign(r_{i-1})* v_{i-1}$\
     LOT 零收益率时间占比 $\frac{n_{rtn = 0}}{n}$\
     Roll价差 $S=2\sqrt{-cov(\Delta P_t, \Delta P_{t-1})}$\
