1.HMM 初步测试 2.close-high; close-low收益率 3.5T因子

--- a/factor/test/因子文档.md
+++ b/factor/test/因子文档.md
@@ -3,7 +3,7 @@
 
 1. 简单-日内收益率的矩：均值、标准差、偏度、峰度
 
-    $mean【5T】、std、skew、kurtosis$
+    $mean、std、skew、kurtosis$
     
 2. 日内收益率分拆
 
@@ -73,7 +73,7 @@
 
 8. 流动性
 
-    amihud $illq = \frac{|rtn|}{amount}$【5T】\
+    amihud $illq = \frac{|rtn|}{amount}$\
     pastor gamma $r_i = \alpha + \gamma*sign(r_{i-1})* v_{i-1}$\
     LOT 零收益率时间占比 $\frac{n_{rtn = 0}}{n}$\
     Roll价差 $S=2\sqrt{-cov(\Delta P_t, \Delta P_{t-1})}$\
@@ -155,9 +155,11 @@ $$ std_{5T} / std_{20T}$$
 
 
 
+# 5T
 
+mean, lowest rtn, highest rtn
 
-
+amihud $illq = \frac{|rtn|}{amount}$
 
 
 
